update gateway